# smurphcast

./: LICENSE  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: publish.yml  python-publish.yml
docs/: api.md  index.md
examples/: auto_select_forecast.py
src/smurphcast/: cli.py  pipeline.py
src/smurphcast/evaluation/: backtest.py  metrics.py
src/smurphcast/features/: lag_feats.py  time_feats.py
src/smurphcast/models/: __init__.py  additive.py  auto_selector.py  gbm.py
tests/: test_bounds.py  test_explainer.py  test_gbm.py  test_metrics.py  test_pipeline_roundtrip.py  test_quantile_gbm.py
